# videocut-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  videocut_cli_blueprint.md
.github/workflows/: homebrew_sync.yml
context/: README.md  cli-commands.md  development-context.md  roadmap.md
docs/: CHANGELOG.md  README.md  architecture.md  commands.md  key-features.md  roadmap.md  user-guide.md  workflow.md
videocut/: cli.py  config.py
videocut/modules/: downloader.py  editor.py
